# lapse

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.claude/skills/deck-builder/: SKILL.md  fetch_edge_tts.py  fill_examples.py  import_lebanese.py  make_sample_deck.py
scripts/: fetch_edge_tts.py  import_lebanese.py  make_sample_deck.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  scheduler.rs  schema.sql
src/lib/: api.ts  store.ts
src/lib/components/: TitleBar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/review/: +page.svelte
src/routes/settings/: +page.svelte
