[package]
name = "lapse"
version = "0.1.0"
description = "A minimal spaced-repetition flashcard app"
authors = ["lapse contributors"]
edition = "2021"

[lib]
name = "lapse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled", "blob"] }
rs-fsrs = "1.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
